--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-autocomplete": "^2.7.0",
+    "react-google-places-autocomplete": "^3.4.0",
     "react-router-dom": "5.3.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
